(lang dune 3.2)

(name boulder_dash)
(authors "Andreas Rossberg")
(source (github rossberg/boulder_dash))
(license LICENSE)
(documentation https://url/to/documentation)

(package
  (name boulder_dash)
  (synopsis "Boulder Dash")
  (description "A clone of the classic Boulder Dash game")
  (depends ocaml dune graphics camlimages)
)
