(executable
  (optional)
  (public_name boulderdash_raylib)
  (name main_raylib)
  (modules api_raylib main_raylib)
  (libraries unix raylib boulderdash)
  (link_deps (include link_deps.sexp))
  (link_flags (:include link_flags.sexp))
)

(rule
  (targets link_deps.sexp link_flags.sexp)
  (action (run ./config/config.exe))
)

(rule
  (targets icon.res)
  (action (run x86_64-w64-mingw32-windres ../../../../platform/win/icon.rc -O coff -o icon.res))
)
